# Music-Generation-LLM

./: .dockerignore  .gitignore  Dockerfile  Makefile  Music tester.py  README.md  app.py  cli.py  docker-compose.yml  lib.py  pyproject.toml  requirements.txt  trumpet_llm_arena.py
adaptive_music_generator/: __init__.py  cli.py  exceptions.py  lib.py  processors.py
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: user.py
app/services/: music.py
cli/: __init__.py  main.py
lib/music_generation/: constants.py  generator.py  theory.py
output/: exercise_Trumpet_Intermediate_4m.json  exercise_b80fbf2c.html  exercise_b80fbf2c.json  exercise_b80fbf2c.mid
processing/audio/: converter.py
processing/midi/: converter.py
processing/visualization/: visualizer.py
tests/: __init__.py  test_api.py  test_cli.py  test_lib.py  test_processors.py
tests/lib/: test_generator.py  test_theory.py
tests/processing/: test_audio_converter.py  test_midi_converter.py  test_visualizer.py
